Bug 309558 - Bad inheritance of keyboard shortcut when creating sub-tag
Summary: Bad inheritance of keyboard shortcut when creating sub-tag
Status: RESOLVED FIXED
Alias: None
Product: digikam
Classification: Applications
Component: Usability-Keyboard (other bugs)
Version First Reported In: 4.0.0
Platform: unspecified Linux
: NOR normal
Target Milestone: ---
Assignee: Digikam Developers
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2012-11-04 22:23 UTC by julien.t43+kde
Modified: 2017-08-02 17:41 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 4.4.0
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description julien.t43+kde 2012-11-04 22:23:47 UTC
When creating a sub-tag of a tag, it seems the children inherits properties of his parents. It includes keyboard shortcut which is obviously bad and create a conflict which makes the shortcut useless.
Shortcut should be exclude from inheritance.


Reproducible: Always

Steps to Reproduce:
1. have a tag with a shortcut defined
2. create a sub-tag
3. use the shortcut of the first tag
Actual Results:  
gui says there is a conflict: nothing done

Expected Results:  
write the corresponding tag
Comment 1 Marcel Wiesweg 2013-01-12 21:08:37 UTC
Git commit 1d0973cbdf8f57a2cf3329be1fcea0587f43df47 by Marcel Wiesweg.
Committed on 12/01/2013 at 22:05.
Pushed by mwiesweg into branch 'master'.

Do not keep shortcut of parent tag in New-Tag-Dialog: Would only create a conflict.
FIXED-IN: 3.0.0

M  +2    -1    NEWS
M  +3    -2    digikam/tags/tageditdlg.cpp

http://commits.kde.org/digikam/1d0973cbdf8f57a2cf3329be1fcea0587f43df47
Comment 2 caulier.gilles 2013-05-18 06:36:06 UTC
Marcel,

With your, TagEdit dialog never show the shortcuts already assigned to a tag from DB.

It's very problematic, because user (me) think that tag has no shortcut assigned, and i try to re-assign it without success. But in background, yes shortcuts work perfectly...

You commit remove assignation of tag KS from DB through this line :

KShortcut ksc(album->property(TagPropertyName::tagKeyboardShortcut()));
d->keySeqWidget->setKeySequence(ksc.primary(), KKeySequenceWidget::NoValidate);

And there is no other code lines to show shortcut details by keySeqWidget. This one still always empty.

Q : What's the purpose of this commit ? If it fix something, it create a regression here... 

Gilles
Comment 3 Marcel Wiesweg 2013-05-19 20:05:39 UTC
Ok, then I edited the wrong location obviously.
The original bug was about a new tag being assigned the same shortcut as the parent, which is contradictory. A new tag should have no shortcut assigned by default.
Comment 4 julien.t43+kde 2013-12-29 08:17:11 UTC
worked on linux/3.4 but with the side-effect mentionned by Gilles

Test on 3.4 (lubuntu 13.10/kde 4.11.3 main install).  pending on 3.5(macos 10.9/kde 4.11.4/macports, mostly w network share)(long collection scanning...)
Comment 5 caulier.gilles 2014-09-02 09:39:20 UTC
Marcel,

The side effect of your previous patch is also reported in bug #338509

Gilles
Comment 6 caulier.gilles 2014-09-13 09:43:48 UTC
Git commit e0877e3205911cd42a792c7d071d638831f4cdec by Gilles Caulier.
Committed on 13/09/2014 at 09:42.
Pushed by cgilles into branch 'master'.

Add rules to not inherit of parent tags keyboard shortcut when creating ne tag.
Editing tags properties must show already assigned tag keyboard shortcut.
Related: bug 338509
FIXED-IN: 4.4.0

M  +3    -1    NEWS
M  +13   -6    app/tags/tageditdlg.cpp
M  +1    -1    app/tags/tageditdlg.h

http://commits.kde.org/digikam/e0877e3205911cd42a792c7d071d638831f4cdec