Do not keep shortcut of parent tag in New-Tag-Dialog: Would only create a conflict.

BUG: 309558
FIXED-IN: 3.0.0